Support double quotes charecters.

--- a/test/fixture/lorem.conf
+++ b/test/fixture/lorem.conf
@@ -22,3 +22,5 @@ lorem51 lorem52 lorem53 lorem54
 lorem61 lorem62
         lorem72 lorem73
 lorem81         lorem83
+
+"Lorem ipsum dolor sit amet" lorem92 12312321
