--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "Make test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xeodou/line-conf"
+  },
+  "homepage": "https://github.com/xeodou/line-conf",
+  "bugs": {
+    "url": "https://github.com/xeodou/line-conf/issues"
+  },
   "devDependencies": {
     "blanket": "1.x",
     "mocha": "1.x",
